[package]
name = "rollup-rust"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "console",
    "Window",
]
