[package]
name = "rollup-rust"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
serde_json = "1.0.61"
serde = "1.0.123"

[dependencies.wasm-bindgen]
version = "0.2.63"
features = [
    "serde-serialize"
]


[dependencies.web-sys]
version = "0.3.47"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "EventListener",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "File",
    "FileList"
]
